# Tangram

./: .gitignore  main.py  pyproject.toml
MyScripts/: data_cropping.py  lightning_module_test.py  load_cropped_data.py  modules_comparsion.py  mytangram_test.py  mytangram_test_script.py  plot_auc_fix_test.py  run_on_crop.py
mytangram/: __init__.py  comparison_utils.py  crossval_utils.py  lightning_mapping_optim.py  lightning_mapping_utils.py  mapping_optimizer.py  mapping_utils.py  training_plot.py  validation_metrics.py  validation_utils.py
tangram/: mapping_utils.py  plot_utils.py
