[project]
name = "tangram-fork"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.10.17"
dependencies = [
    "anndata>=0.11.4",
    "lightning>=2.5.1.post0",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "scanpy>=1.11.1",
    "squidpy>=1.6.5",
    "tangram-sc>=1.0.4",
]
